src/test/ui/borrowck/borrowck-return.stderr
error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-return.rs:3:12
   |
LL |     let x: isize;
   |         - binding declared here but left uninitialized
LL |     return x;
   |            ^ `x` used here but it isn't initialized

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
